# GameSFML

./: README.md
Code/: .gitignore  CMakeLists.txt
Code/Android/: AndroidManifest.xml
Code/Android/jni/: Android.mk  AndroidClient.cpp  Application.mk  Log.hpp
Code/include/: Personnage.hpp  Portee.hpp  Sort.hpp  SortVisuel.hpp  State.hpp  TextVisuel.hpp  VectorFunctions.hpp  formes.hpp
Code/src/: .MainSFML.cpp.swp  .Personnage.cpp.swp  .gitignore  CMakeLists.txt  MainSFML.cpp  Makefile  Personnage.cpp  Personnage.hpp  Portee.cpp  Sort.cpp  SortVisuel.cpp  State.cpp  TextVisuel.cpp  client.cpp  formes.cpp  formes.hpp  makegen.py  server.cpp
